--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -1,10 +1,19 @@
 % Flexibilidade e extensibilidade são alguns dos pricipais requisitos não funcionais da arquitetura
+% -----------------------------------------------------------
+% Adicionar pelo menos 4;
+% Adicionar uma tabela comparando as características do trabalho correlato com o meu;
+% Ver como as tecnologias concorrentes como PhoneGap, Xamarin provêem apis de alto nível
+% para atender aos requisitos não funcionais.
+% Arquitetura de referência para mobile e Frameworks para mobile
+% -----------------------------------------------------------
 
 \section{TRABALHOS RELACIONADOS}
-Nesta seção, serão detalhados os trabalhos relacionados com este projeto. O detalhamento será feito com uma descrição geral do trabalho desenvolvido e como ele se relaciona com este projeto. Será considerado também os pontos fracos e fortes identificados exibidos em uma simples tabela.
+Nesta seção, serão detalhados os trabalhos relacionados com este projeto. O detalhamento será feito com uma descrição geral do trabalho desenvolvido e como ele se relaciona com este projeto. Será considerado também os pontos fracos e fortes identificados exibidos em uma simples tabela.\par\par
 
-%artigo na pasta 1%
-O trabalho apresentado por Maison Melotti \cite{melotti_2014} teve como objetivo definir uma arquitetura de referência denominada \textit{CREAMA} (\textit{Component-Based Reference Architecture for Collaborative Mobile Applications}) para aplicações colaborativas em dispositivos móveis Android baseadas em componentes. Melotti desenvolveu uma arquitetura com base nos requisitos de sistemas colaborativos, os requisitos foram levantados a partir de uma pesquisa sobre técnicas atuais de desenvolvimento de sistemas colaborativos e sistemas colaborativos móveis observando a partir do estado da arte, do suporte metodológico e computacional para o desenvolvimento dessa categoria de sistemas. Dentre as principais contribuições desse trabalho de Melotti, destaca-se: Mapeamento de diferentes requisitos genéricos ou frequentes de sistemas colaborativos móveis, elaboração de um cenário motivador para auxiliar na definição de requisitos de aplicações móveis baseadas em componentes e disposição de componentes para comunicação entre dispositivos e uso de sensores. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, neste trabalho optou-se por uma plataforma específica, o Android. A tabela à seguir, apresenta um comparativo de atributos entre o projeto de arquitetura apresentado neste artigo e o trabalho de Melotti.
+\textbf{Uma Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes}\par
+A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes. As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma. A arquitetura proposta dará suporte ao desenvolvimento de novos sistemas baseados em componentes, considerando também aspectos relativos à comunicação com a Web.\par
+
+O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínio específico, os trabalhos se relacionam no atendimento de dois requisitos funcionais, que são eles cache de dados, notificações do sistema (local e \textit{push notification}), acesso a rede (requisições HTTP) e o provimento de componentes reutilizáveis pelas aplicações baseadas na arquitetura proposta.
 
 \begin{table}[H]
 	\centering
@@ -13,20 +22,35 @@ O trabalho apresentado por Maison Melotti \cite{melotti_2014} teve como objetivo
 		\hline
 		\multicolumn{1}{|c|}{Recurso}                                                                 & \begin{tabular}[c]{@{}c@{}}Esta\\arquitetura \end{tabular} &
 		\begin{tabular}[c]{@{}c@{}}Arquitetura\\de Melotti\end{tabular} \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Suporte multiplataforma\\(Android e iOS)\end{tabular} & Sim                                                                           & Não                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Recursos extensíveis\\através de plugins\end{tabular}             & Sim                                                                           & Não                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê componentes de\\alto nível para a aplicação\end{tabular}    & Sim                                                                           & Não                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Suporte a comunicação\\através de eventos\end{tabular}            & Sim                                                                           & Não                                                                        \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê suporte multiplataforma\\Desktop e Mobile (Android e iOS)\end{tabular} & Sim                                                                           & Não                                                                        \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê recursos extensíveis\\através de plugins\end{tabular}             & Sim                                                                           & Não                                                                        \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê APIs de alto nível\\(Rede, banco de dados, UI)\end{tabular}            & Sim                                                                           & Sim                                                                        \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê componentes reutilizáveis\end{tabular}            & Sim                                                                           & Sim                                                                        \\ \hline
 	\end{tabular}
-	\caption{Comparação entre este trabalho e o de Melotti}
+	\caption{Comparação entre este trabalho e o de Maison Melotti}
 \end{table}
 
-%artigo na pasta 2%
-Estudo comparativo entre o desenvolvimento de aplicativos móveis utilizando abordagem nativa e multiplataforma
+
+%artigo 2%
+\textbf{MoCA: Uma Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis}\par
+MoCA (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece recursos para o desenvolvimento de aplicações distribuídas sensíveis ao contexto que envolvem usuários móveis. Esses recursos incluem um serviço para a coleta, armazenamento e distribuição de informações de contexto e um serviço de inferência de localização de dispositivos móveis. Além disso, a arquitetura provê APIs para o desenvolvimento de aplicações que interagem com estes servicos como consumidores de informações de contexto. Os servicos providos pela MoCA livram o programador da obrigação de implementar serviços específicos para a coleta e tratamento de contexto. O conjunto de APIs oferecidas pela MoCA para desenvolvimento de aplicações compreende tres grupos: as APIs de comunicação, que fornecem interfaces de comunicação sícrona e assícrona (baseada em eventos); as APIs principais que fornecem interfaces de comunicação com os serviços básicos da arquitetura; e as APIs opcionais que facilitam o desenvolvimento de aplicações baseadas na arquitetura cliente-servidor.\par
+
+A relação deste trabalho com a arquitetura porposta em MoCA pode ser entendida pelo uso dos estilos arquiteturais \textit{Event Based} e \textit{Cliente Servidor}. Além provê APIs de alto nível para operações de rede (HTTP), persistência de dados no dispositivo e notificação do sistema. No entando, MoCa foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente servidor através de serviços RESTFul. A tabela a seguir comparar os principais recursos desta arquitetura com o modelo proposta em MoCA.
+
+\begin{table}[H]
+	\centering
+	\label{my-label}
+	\begin{tabular}{|l|c|c|}
+		\hline
+		\multicolumn{1}{|c|}{Recurso}                                                                 & \begin{tabular}[c]{@{}c@{}}Esta\\arquitetura \end{tabular} &
+		\begin{tabular}[c]{@{}c@{}}Arquitetura\\MoCA\end{tabular} \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê suporte multiplataforma\\Desktop e Mobile (Android e iOS)\end{tabular} & Sim                                                                           & Não                                                                        \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê recursos extensíveis\\através de plugins\end{tabular}             & Sim                                                                           & Não                                                                        \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê APIs de alto nível\\(Rede, banco de dados, UI)\end{tabular}            & Sim                                                                           & Sim                                                                        \\ \hline
+		\begin{tabular}[c]{@{}l@{}}Provê componentes reutilizáveis\end{tabular}            & Sim                                                                           & Não                                                                        \\ \hline
+	\end{tabular}
+	\caption{Comparação entre este trabalho e o de Maison Melotti}
+\end{table}
 
 
-% Adicionar pelo menos 4;
-% Adicionar uma tabela comparando as características do trabalho correlato com o meu;
-% Ver como as tecnologias concorrentes como PhoneGap, Xamarin provêem apis de alto nível
-% para atender aos requisitos não funcionais.
-% Arquitetura de referência para mobile e Frameworks para mobile
+%artigo 3%
